2011-11-19  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/maxcharactersperline.h:
	Fix bug #14663 : Feature Request: Cut Line.

2011-11-16  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Add Video and Waveform recent files.

2011-11-16  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc:
	* plugins/subtitleformats/substationalpha/substationalpha.cc:
	Add the default ASS/SSA style in the config file.

2011-11-11  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	Fix bug #18905 : Clic molette.
	Button2 only move the cursor, play with Shift.

2011-11-03  kitone  <kitone@gna.org>

	* src/subtitleview.cc:
	Fix bug #18903 : Durée du sous-titre incorrecte.

2011-11-03  kitone  <kitone@gna.org>

	* plugins/actions/changeframerate/changeframerate.cc:
	Fix bug #18904 : Change framerate.

2011-11-01  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/subtitleformats/Makefile.am:
	* plugins/subtitleformats/dcsubtitle/Makefile.am:
	* plugins/subtitleformats/dcsubtitle/dcsubtitle.cc:
	* plugins/subtitleformats/dcsubtitle/dcsubtitle.se-plugin.in:
	Introduce new subtitleformat 'dcsubtitle' - DLP Cinema Subtitle.

2011-10-30  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	Add the ability to skip frame by frame. (Lilian request)

	* src/player.h:
	* src/vp/gstplayer.cc:
	* src/vp/gstplayer.h:
	Return framerate (fraction) in separate values.

2011-10-20  kitone  <kitone@gna.org>

	* plugins/actions/documentsnavigation/documentsnavigation.cc:
	Failed to compile.

2011-10-20  kitone  <kitone@gna.org>

	* plugins/actions/movesubtitles/dialog-move-subtitles.ui:
	* plugins/actions/textcorrection/assistant-text-correction.ui:
	* plugins/actions/textcorrection/patternspage.h:
	Fix untranslated text.

2011-10-04  kitone  <kitone@gna.org>
